Round of visual fixes.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -27,12 +27,27 @@
 
 		.alignfull {
 			position: relative;
-			transform: translateX( -50% );
-			width: 100vw;
+			/*transform: translateX( -50% );*/
 			max-width: 100vw;
 			margin-top: 1em;
 			margin-bottom: 1em;
-			left: 50%;
+			/*left: 50%;*/
+			margin-left: calc(50% - 50vw);
+			margin-right: calc(50% - 50vw);
+			width: auto;
+		}
+	}
+
+	/* Make non image-based blocks a bit narrower, so they don't get cut off. */
+	.wp-block-columns,
+	.wp-block-audio,
+	.wp-block-table,
+	.wp-block-latest-comments,
+	.wp-block-categories,
+	.wp-block-latest-posts {
+		&.alignfull {
+			margin-left: calc(50% - 48vw);
+			margin-right: calc(50% - 48vw);
 		}
 	}
 	
@@ -79,52 +94,11 @@
 	
 }
 
-// !Block Color Palette Colors
-
-.has-background {
-	padding: $x-space-sm;
+// !Paragraph
+p.has-drop-cap:not(:focus)::first-letter {
+	font-size: 7.4em;
+	margin: 0;
 }
-
-.has-orange-color {
-	color: $x-color-accent-base;
-}
-
-.has-orange-background-color {
-	background-color: $x-color-accent-base;
-}
-
-.has-pink-color {
-	color: $x-color-shade-gray-2;
-}
-
-.has-pink-background-color {
-	background-color: $x-color-shade-gray-2;
-}
-
-.has-light-gray-color {
-	color: $x-color-shade-gray-4;
-}
-
-.has-light-gray-background-color {
-	background-color: $x-color-shade-gray-4;
-}
-
-.has-medium-gray-color {
-	color: $x-color-shade-gray-6;
-}
-
-.has-medium-gray-background-color {
-	background-color: $x-color-shade-gray-6;
-}
-
-.has-dark-gray-color {
-	color: $x-color-primary-base;
-}
-
-.has-dark-gray-background-color {
-	background-color: $x-color-primary-base;
-}
-
 
 // !Buttons
 
@@ -133,17 +107,17 @@
 
 	background-color: $x-color-accent-base;
 	color: $x-color-shade-white;
-	padding: $x-space-xxs $x-space-xs;
-	font-family: $x-font-family-accent;
-	font-size: $x-font-size-sm;
-	line-height: $x-font-leading-body;
-	letter-spacing: $x-font-letter-spacing;
-	border-radius: 0;
 	border: 1px solid $x-color-shade-white;
-	outline: 3px solid $x-color-accent-base;
+	border-radius: 0;
 	cursor: pointer;
 	display: inline-block;
+	font-family: $x-font-family-accent;
+	font-size: $x-font-size-sm;
 	font-weight: 600;
+	line-height: $x-font-leading-body;
+	letter-spacing: $x-font-letter-spacing;
+	outline: 3px solid $x-color-accent-base;
+	padding: $x-space-xxs $x-space-xs;
 	text-decoration: none;
 	text-transform: uppercase;
 	vertical-align: middle;
@@ -161,6 +135,11 @@
 	@include media( tablet ) {
 		padding: $x-space-xs $x-space-sm;
 	}
+}
+
+.wp-block-button__link {
+	background-color: $x-color-accent-base;
+	color: $x-color-shade-white;
 }
 
 // !Audio
@@ -274,6 +253,10 @@
 		text-transform: none;
 		margin: 0;
 
+		a, a:hover {
+			color: $x-color-accent-base;
+		}
+
 		@include media(mobile) {
 			max-width: 92%;
 		}
@@ -356,10 +339,14 @@
 
 .wp-block-categories,
 .wp-block-archives,
-.wp-block-latest-posts {
-	@include media( tablet ) {
-		padding-left: $x-space-lg;
-		padding-right: $x-space-lg;
+.wp-block-latest-posts,
+.wp-block-latest-comments {
+
+	&.aligncenter {
+		list-style-position: inside;
+		margin-left: 0;
+		margin-right: 0;
+		text-align: center;
 	}
 }
 
@@ -399,6 +386,7 @@ ol.wp-block-latest-comments {
 		}
 	}
 }
+
 ol.wp-block-latest-comments {
 	
 	> li:before {
@@ -406,11 +394,7 @@ ol.wp-block-latest-comments {
 	}
 
 	li {
-		padding-left: 0;
-
-		@include media(tablet) {
-			padding-left: $x-space-md;
-		}			
+		padding-left: 0;		
 	}
 }
 
@@ -418,6 +402,24 @@ ol.wp-block-latest-comments {
 	p {
 		font-size: inherit;
 	}
+}
+
+.wp-block-latest-comments.aligncenter.has-avatars {
+	
+	.wp-block-latest-comments__comment {
+
+		padding-left: 0;
+		
+		.wp-block-latest-comments__comment-excerpt,
+		.wp-block-latest-comments__comment-meta {
+			margin-left: 0;
+		}
+	}
+
+	.avatar {
+		float: none;
+	}
+
 }
 
 // !Tables
@@ -437,7 +439,7 @@ ol.wp-block-latest-comments {
 	}
 
 	thead tr:nth-child(odd) {
-		background-color: $x-color-primary-bg;
+		background-color: $x-color-shade-gray-2;
 	}
 }
 
@@ -481,6 +483,11 @@ table.wp-block-table {
 	left: 0;
 	bottom: 0;
 	right: 0;
+}
+
+.wp-block-embed.is-type-video.alignfull iframe {
+	height: 100% !important;
+	width: 100% !important;
 }
 
 // !Blockquotes & Pull quotes
@@ -604,6 +611,13 @@ table.wp-block-table {
 	}
 }
 
+// !Verse
+.wp-block-verse {
+	font-family: $x-font-family-body;
+	font-size: $x-font-size-base;
+	font-style: italic;
+}
+
 // !Separators
 
 .wp-block-separator {
@@ -659,7 +673,6 @@ table.wp-block-table {
 	
 }
 
-
 // !Gallery Block
 
 .wp-block-gallery .blocks-gallery-image figcaption,
@@ -676,4 +689,60 @@ table.wp-block-table {
 			margin: 0 auto !important;
 		}
 	}
+}
+
+// !Block Color Palette Colors
+
+.has-background {
+	padding: $x-space-sm;
+}
+
+.has-orange-color,
+.wp-block-button__link.has-orange-color {
+	color: $x-color-accent-base;
+}
+
+.has-orange-background-color,
+.wp-block-button__link.has-orange-background-color {
+	background-color: $x-color-accent-base;
+}
+
+.has-pink-color,
+.wp-block-button__link.has-pink-color {
+	color: $x-color-shade-gray-2;
+}
+
+.has-pink-background-color,
+.wp-block-button__link.has-pink-background-color {
+	background-color: $x-color-shade-gray-2;
+}
+
+.has-light-gray-color,
+.wp-block-button__link.has-light-gray-color {
+	color: $x-color-shade-gray-4;
+}
+
+.has-light-gray-background-color,
+.wp-block-button__link.has-light-gray-background-color {
+	background-color: $x-color-shade-gray-4;
+}
+
+.has-medium-gray-color,
+.wp-block-button__link.has-medium-gray-color {
+	color: $x-color-shade-gray-6;
+}
+
+.has-medium-gray-background-color,
+.wp-block-button__link.has-medium-gray-background-color {
+	background-color: $x-color-shade-gray-6;
+}
+
+.has-dark-gray-color,
+.wp-block-button__link.has-dark-gray-color {
+	color: $x-color-primary-base;
+}
+
+.has-dark-gray-background-color,
+.wp-block-button__link.has-dark-gray-background-color {
+	background-color: $x-color-primary-base;
 }
