Update screenshot, and minor CSS tweaks.

--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -25,7 +25,7 @@ $x-color-shade-gray-4:  #e5e5e5;
 /*
 $x-color-shade-gray-3:  #a8b1b8;
 */$x-color-shade-gray-2:  #fff4ee;
-/*$x-color-shade-gray-1:  #e8ecf1;*/
+$x-color-shade-gray-1:  #f5f5f5;
 $x-color-shade-white:   #ffffff;
 
 $x-color-feedback-success: #88c459;
