--- a/stylesheets/_forms.scss
+++ b/stylesheets/_forms.scss
@@ -10,14 +10,13 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	background-color: $x-color-accent-base;
+	border: 4px double $x-color-shade-white;
 	color: $x-color-shade-white;
 	padding: $x-space-xxs $x-space-xs;
 	font-family: $x-font-family-accent;
 	font-size: $x-font-size-xs;
 	line-height: $x-font-leading-body;
 	letter-spacing: $x-font-letter-spacing;
-	border: 1px double $x-color-shade-gray-2;
-	outline: 3px solid $x-color-accent-base;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: 600;
@@ -36,7 +35,6 @@ input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
 	background-color: $x-color-words-base;
-	outline-color: $x-color-words-base;
 }
 
 .button:active, .button:focus,
@@ -50,7 +48,6 @@ input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
 	background-color: $x-color-words-base;
-	outline-color: $x-color-words-base;
 }
 
 input[type="text"],
