--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -27,12 +27,27 @@
 
 		.alignfull {
 			position: relative;
-			transform: translateX( -50% );
-			width: 100vw;
+			/*transform: translateX( -50% );*/
 			max-width: 100vw;
 			margin-top: 1em;
 			margin-bottom: 1em;
-			left: 50%;
+			/*left: 50%;*/
+			margin-left: calc(50% - 50vw);
+			margin-right: calc(50% - 50vw);
+			width: auto;
+		}
+	}
+
+	/* Make non image-based blocks a bit narrower, so they don't get cut off. */
+	.wp-block-columns,
+	.wp-block-audio,
+	.wp-block-table,
+	.wp-block-latest-comments,
+	.wp-block-categories,
+	.wp-block-latest-posts {
+		&.alignfull {
+			margin-left: calc(50% - 48vw);
+			margin-right: calc(50% - 48vw);
 		}
 	}
 	
@@ -410,6 +425,10 @@ ol.wp-block-latest-comments {
 		padding: .5em;
 		text-align: left;
 	}
+
+	&.alignfull {
+		width: 96vw;
+	}
 }
 
 .entry-content table,
@@ -458,38 +477,48 @@ table.wp-block-table {
 
 .wp-block-quote {
 	
-	padding: $x-space-xs $x-space-sm;
+	padding: $x-space-sm $x-space-md $x-space-sm $x-space-lg;
 	max-width: 100%;
 	width: 100%;
 
 	p {	
 		margin: 0; 
-//		font-size: $x-font-size-base;
+		font-weight: 600;
 	}
-	
-	&.is-large, &.is-style-large {
-		padding-left: $x-space-md;
+
+	&:before {
+		content: "\201C";
+		font-family: Georgia,serif;
+		font-weight: 400;
+		position: absolute;
+		left: 12px;
+		top: 0;
+		font-size: 60px;
+	}
+
+	&.is-large, 
+	&.is-style-large {
+		padding: $x-space-sm $x-space-sm $x-space-sm $x-space-lg;
+
 		p {
-			font-size: $x-font-size-lg;
-			line-height: $x-font-family-heading;
+			font-size: $x-font-size-md;
+			font-style: normal;
 		}
-		
-		p, cite {
-			padding-left: 0;
-		}
-		
+				
 		cite {
 			font-size: calc( #{$x-font-size-md} * 0.92 );
+		}
+
+		&:before {
+			font-size: 70px;
 		}
 
 	}
 
 	cite {
-		font-family: $x-font-family-heading;
 		font-size: $x-font-size-sm;
 		color: $x-color-words-subtle;
 		font-style: normal;
-		font-weight: 300;
 	}
 
 	@include media( tablet ) {
@@ -562,6 +591,22 @@ table.wp-block-table {
 	&.alignfull {
 		max-width: calc( 100vw - 2em ) !important;
 	}
+}
+
+// !Verse
+.wp-block-verse {
+	font-family: $x-font-family-body;
+	font-size: $x-font-size-base;
+	font-style: italic;
+}
+
+// !Code
+.wp-block-code {
+	background: $x-color-shade-gray-1;
+	border: none;
+	border-radius: 0;
+	font-family: $code-font;
+	font-size: inherit;
 }
 
 // !Separators
