--- a/editor.scss
+++ b/editor.scss
@@ -1,353 +1,533 @@
+/*
+Theme Name: Business Professional
+Description: Used to style Gutenberg Blocks in the editor.
+*/
 
-@import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic");
+/*--------------------------------------------------------------
+>>> TABLE OF CONTENTS:
+----------------------------------------------------------------
+1.0 General Typography
+2.0 General Block Settings
+3.0 Blocks - Common Blocks
+4.0 Blocks - Formatting
+5.0 Blocks - Layout Elements
+6.0 Blocks - Widgets
 
+--------------------------------------------------------------*/
 @import "stylesheets/variables/index";
 @import "stylesheets/inc/index";
 
 :root {}
 
-@import "stylesheets/typography";
-@import "stylesheets/elements-common";
+/*--------------------------------------------------------------
+1.0 General Typography
+--------------------------------------------------------------*/
 
-@import "css/blocks.scss";
-
-@mixin editor-font-base {
-	font-size: $x-font-size-base;
-
-	@include media(tablet) {
-		// font-size for tablet and up
-		font-size: calc( #{$x-font-size-base} * 0.95065 * #{$x-font-size-responsive-ratio} );
-	}
-}
-
-.gutenberg .edit-post-visual-editor, p {
-	@include editor-font-base;
-	
-	h1, h2, h3, h4, h5, h6 {
-		margin-top: 0.83em;
-	}
-	
-}
-
-.block-editor-page {
-	@include media( desktop ) {
-		
-		.editor-post-title {
-			margin: 0 auto;
-		}
-		
-		.editor-post-title__block {
-			max-width: 740px !important;
-		}
-	
-		.editor-post-title__input {
-
-		}
-	
-		
-	}
-}
-
-.wp-block-columns {
-	
-	.editor-block-list__block {
-		margin-top: 1em;
-	}
-	
-	p {
-		font-size: 0.810em;
-	}
-	
-}
-
-[data-type="core/column"] {
-	
-	.editor-block-list__block .wp-block-columns .editor-block-list__block {
-		outline: solid 2px red;
-		max-width: 100%;
-	}
-	
-}
-
-.editor-block-list__block .wp-block-columns .editor-block-list__block
-
-
-.gutenberg .editor-block-list__block blockquote p,
-.gutenberg .editor-block-list__block blockquote.is-large p {
-	@include editor-font-base;
-	padding-left: 0;
-}
-
-.editor-block-list__layout > .editor-block-list__block > .editor-block-list__block-edit,
-.editor-block-list__layout > .editor-block-list__layout > .editor-block-list__block > .editor-block-list__block-edit,
-.editor-block-list__layout > .editor-default-block-appender__content {
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-.edit-post-visual-editor .editor-block-list__block[data-align=wide] {
-	max-width: $x-space-column-12;
-}
-
-.editor-default-block-appender input[type="text"].editor-default-block-appender__content,
-.editor-post-title .editor-post-title__input,
-.edit-post-visual-editor,
-.edit-post-visual-editor p {
+.edit-post-visual-editor .editor-block-list__block,
+.editor-default-block-appender input[type="text"].editor-default-block-appender__content {
 	font-family: $x-font-family-body;
 }
 
-.editor-post-title .editor-post-title__input {
-	font-size: $x-font-size-xl;
-	font-weight: 900;
-	line-height: 1.2;
-	margin-bottom: 1.85rem;
-	@include media( tablet ) {
-		font-size: calc( #{$x-font-size-xxxl} * 1.175 );
-	}
-}
-
-// Editor width.
-.editor-block-list__block {
-	margin: 0 auto;
-	@include media( desktop ) {
-		max-width: $x-grid-column-7;
-		min-width: 740px;
-	}
-}
-
-.wp-block-columns .editor-block-list__block {
-	min-width: auto;
-}
-
-.editor-block-list__block[data-type="core/table"] .wp-block-table {
-	max-width: 100%;
-}
-
-.editor-block-list__block[data-type="core/table"][data-align=center] table {
-	width: 100%;
-}
-
-// Line height.
-
-.editor-rich-text__tinymce.mce-content-body {
+.edit-post-visual-editor .editor-block-list__block,
+.edit-post-visual-editor .editor-block-list__block p,
+.editor-default-block-appender input[type="text"].editor-default-block-appender__content {
 	line-height: $x-font-leading-body;
+	font-weight: 400;
 }
 
-// Links.
-.editor-block-list__layout a {
-	@include link-underline;
+.edit-post-visual-editor .editor-block-list__block {
+	color: $x-color-words-base;
 }
 
-// Links
-.editor-block-list__layout
+/* Post title */
 
-// List styles.
+.editor-post-title__block .editor-post-title__input {
+	font-family: $x-font-family-heading;
+	font-size: $x-font-size-xxxl;
+	text-align: center;
+}
 
-.block-library-list {
+/* Headings - applies to both Classic and Header blocks */
+
+.edit-post-visual-editor h1,
+.wp-block-freeform.block-library-rich-text__tinymce h1,
+.edit-post-visual-editor h2,
+.wp-block-freeform.block-library-rich-text__tinymce h2,
+.edit-post-visual-editor h3,
+.wp-block-freeform.block-library-rich-text__tinymce h3,
+.edit-post-visual-editor h4,
+.wp-block-freeform.block-library-rich-text__tinymce h4,
+.edit-post-visual-editor h5,
+.wp-block-freeform.block-library-rich-text__tinymce h5,
+.edit-post-visual-editor h6,
+.wp-block-freeform.block-library-rich-text__tinymce h6 {
+	font-family: $x-font-family-heading;
+	color: $x-color-shade-black;
+}
+
+.edit-post-visual-editor h1,
+.wp-block-freeform.block-library-rich-text__tinymce h1 {}
+
+.edit-post-visual-editor h2,
+.wp-block-freeform.block-library-rich-text__tinymce h2 {
+}
+
+.edit-post-visual-editor h3,
+.wp-block-freeform.block-library-rich-text__tinymce h3 {}
+
+.edit-post-visual-editor h4,
+.wp-block-freeform.block-library-rich-text__tinymce h4 {}
+
+.edit-post-visual-editor h5,
+.wp-block-freeform.block-library-rich-text__tinymce h5 {
+	text-transform: uppercase;
+}
+
+.edit-post-visual-editor h6,
+.wp-block-freeform.block-library-rich-text__tinymce h6 {
+	text-transform: uppercase;
+}
+
+
+/*--------------------------------------------------------------
+2.0 General Block Settings
+--------------------------------------------------------------*/
+
+/* Main content width */
+
+.wp-block {
+	/* max-width: XXX -- content width plus 30px to account for editor padding */
+	max-width: 740px;
+}
+
+/* Link styles */
+
+.edit-post-visual-editor a,
+.editor-block-list__block a,
+.wp-block-freeform.block-library-rich-text__tinymce a {
+	color: $x-color-secondary-base;
+	text-decoration: none;
+	@include link-underline();
 	
-	.editor-rich-text__tinymce {
-		margin-left: 0;
+	&:hover {
+		color: $x-color-primary-base;
+	}
+}
+
+/* 
+* General HTML selectors, used for the Classic Block 
+*/
+
+/* Table styles */
+
+.wp-block-freeform.block-library-rich-text__tinymce table {
+	border-collapse: collapse;
+
+	td,
+	th {
+		border: 0;
+		padding: .5em;
+		text-align: left;
+	}
+
+	tr:nth-child(even) {
+		background-color: $x-color-shade-gray-1;
 	}
 	
-	ol {
-		list-style: none;
-		padding-left: 0;
-		> li {
-
-				counter-increment: sans-counter;
-				position: relative;
-				padding-left: $x-space-md;
-
-				ol li {
-					padding-left: $x-space-md;
-				}
-
-				ul li {
-					padding-left: $x-space-sm;
-				}
-
-				&:before {
-					content: counter(sans-counter, decimal-leading-zero) "\00a0";
-					left: 0;
-					position: absolute;
-					top: $x-space-xxs;
-					color: $x-color-primary-base;
-					font-family: $x-font-family-heading;
-					font-size: $x-font-size-xs;
-					line-height: $x-font-leading-md;
-				}
-			}
+	thead tr:nth-child(odd) {
+			background-color: $x-color-shade-gray-2;
 	}
 }
 
-.gutenberg .wp-block-categories ul,
-.gutenberg .wp-block-latest-posts,
-.gutenberg ul.wp-block-archives {
-	padding-left: 0.5em;
+.rtl .wp-block-freeform.block-library-rich-text__tinymce td,
+.rtl .wp-block-freeform.block-library-rich-text__tinymce th {}
+
+/* Quote styles */
+.wp-block-freeform.block-library-rich-text__tinymce blockquote {
+	border-left: 4px solid grey;
+	border-color: $x-color-accent-base;
 }
 
-[data-align="full"] {
-	.wp-block-categories ul,
-	.wp-block-latest-posts,
-	ul.wp-block-archives {
-		padding-left: $x-space-lg;
-	}
+.wp-block-freeform.block-library-rich-text__tinymce blockquote p {
+	font-style: italic;
+	font-size: $x-font-size-md;
 }
 
-// Separators
-
-hr {
-	background-color: $x-color-shade-gray-2;
-	border: 0;
-	height: 3px;
-	margin-bottom: 1.5em;
+.wp-block-freeform.block-library-rich-text__tinymce blockquote cite {
+	color: $x-color-words-subtle;
 }
 
-// Blockquote
-
-.edit-post-visual-editor .editor-block-list__block[data-align=full] {
-	> .editor-block-list__block-edit {
-		margin-left: 0;
-		margin-right: 0;
-	}
-	
-	.wp-block-pullquote blockquote {
-		max-width: calc( 100vw - 2em );
-	}
+.rtl .wp-block-freeform.block-library-rich-text__tinymce blockquote {
+	border-left: none;
+	border-right: 4px solid grey;
 }
 
-.wp-block-pullquote blockquote >.block-library-pullquote__content .editor-rich-text__tinymce[data-is-empty=true]:before,
-.wp-block-pullquote blockquote>.editor-rich-text p {
-	font-size: calc( #{$x-font-size-md} * 1.056 );
+/* List styles */
+
+.wp-block-freeform.block-library-rich-text__tinymce li,
+.editor-styles-wrapper li {
+	margin-bottom: 0;
 }
 
-blockquote {
+/* Code styles */
 
-	max-width: 1100px;
-	margin: 0 auto;
-	border-left-color: $x-color-accent-base !important;
-	
-	&.wp-block-quote.is-style-large {
-		padding-left: $x-space-xl;
-	}
-	
-	&.wp-block-quote,
-	&.wp-block-quote.is-large,
-	&.wp-block-quote.is-style-large {
-		
-		@include media(tablet) {
-			margin-right: 0;
-		}
-	}
-
-	.wp-block-quote__citation {
-//		padding-left: $x-space-sm;
-	}
+.wp-block-freeform.block-library-rich-text__tinymce code {
+	background: $x-color-shade-gray-1;
+	border: none;
+	border-radius: 0;
 }
 
-// Pull quote
+/* Caption styles */
 
-.wp-block-pullquote {
-	border-bottom: none;
-	border-top: none;
+[class^="wp-block-"] figcaption {
+	color: $x-color-words-subtle;
+	font-size: $x-font-size-sm;
+	font-style: italic;
 }
 
-// Columns
-
-.wp-block-text-columns,
-.wp-block-columns {
-	@include media(tablet) {
-		margin-right: 0;
-	}
-}
-
-// Images
-
-.wp-block-image {
-	figcaption {
-		margin-top: 0.8em;
-	}
-}
-
-// Tables
-.wp-block-table td ,
-.wp-block-table th {
-	border-width: 0;
-}
-
-// Latest Posts
-
-.wp-block-categories,
-.wp-block-archives,
-.wp-block-latest-posts,
-.wp-block-latest-comments {
-	font-size: calc( #{$x-font-size-md} * 0.86 );
-	li a {
-		@include link-underline;
-	}
-}
-
-.wp-caption .wp-caption-text,
-.wp-block-audio figcaption,
-.wp-block-video figcaption,
-.wp-block-image figcaption,
-.wp-block-gallery .blocks-gallery-image figcaption,
-.wp-block-gallery .blocks-gallery-item figcaption,
-.wp-block-quote .wp-block-quote__citation,
-.wp-block-pullquote .wp-block-pullquote__citation,
-.wp-block-pullquote cite {
-	font-size: calc( #{$x-font-size-sm} * 1.05 );
-}
-
+.wp-block-gallery .blocks-gallery-image figcaption, 
 .wp-block-gallery .blocks-gallery-item figcaption {
-	margin-bottom: -10px;
+	color: $x-color-shade-white;
 }
 
-.wp-block-gallery.alignfull {
-	max-width: 100%;
-	width: calc( 100% - 2 * 1em );
-	margin: 0 auto;
+/* Definition List styles */
+
+.wp-block-freeform.block-library-rich-text__tinymce dt {
+	font-weight: bold;
 }
 
-.edit-post-visual-editor .editor-block-list__block[data-align=full] {
-	padding: 0;
+/* Pre styles */
+
+.wp-block-freeform.block-library-rich-text__tinymce pre {
+	background-color: $x-color-shade-gray-2;
+	padding: $x-space-sm;
 }
 
-.wp-block-quote.is-style-default .wp-block-quote__citation {
-	font-size: calc( #{$x-font-size-sm} * 1.1205 );
+/*--------------------------------------------------------------
+3.0 Blocks - Common Blocks
+--------------------------------------------------------------*/
+
+/* Paragraph */
+
+p.has-drop-cap:not(:focus)::first-letter {}
+
+/* Quote */
+.wp-block-quote {
+	border-left: 4px solid grey;
+	border-left-color: $x-color-accent-base;
 }
 
 .wp-block-quote:not(.is-large):not(.is-style-large) {
-	padding-left: calc( #{$x-space-lg} * 0.75 );
-}
+	font-style: italic;
+	border-left: 4px solid grey;
+	border-left-color: $x-color-accent-base;
 
-.gutenberg .editor-block-list__block blockquote.wp-block-quote.is-style-large {
-	padding-left: $x-space-md;
 	p {
-		font-size: calc( #{$x-font-size-lg} * 1.10 );
-	}
-	.wp-block-quote__citation {
 		font-size: $x-font-size-md;
+		font-style: italic;
+	}
+
+	cite {
+		color: $x-color-words-subtle;
 	}
 }
 
-.editor-block-list__block[data-type="core/paragraph"] a {
-	@include link-underline;
+.wp-block-quote .wp-block-quote__citation {}
+
+.wp-block-quote.is-large p,
+.wp-block-quote.is-style-large p {}
+
+.wp-block-quote.is-large .wp-block-quote__citation,
+.wp-block-quote.is-style-large .wp-block-quote__citation {}
+
+.rtl .editor-styles-wrapper .wp-block-quote,
+.rtl .wp-block-quote:not(.is-large):not(.is-style-large) {}
+
+/* Cover */
+
+.wp-block-cover {
+	background-color: $x-color-secondary-base;
+
+	.wp-block-cover-text {
+		a, a:hover {
+			color: $x-color-accent-base;
+		}
+	}
 }
 
-.editor-block-list__block[data-type="core/separator"] {
-	margin-top: $x-space-lg;
-	margin-bottom: $x-space-lg;
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image .wp-block-cover-image-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image .wp-block-cover-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover-image h2,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover .wp-block-cover-image-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover .wp-block-cover-text,
+.edit-post-visual-editor .editor-block-list__block .wp-block-cover h2 {
+	font-size: 2.0em; /* Cover images inherit the paragraph size; this resets it */
+	color: $x-color-shade-white;
+	padding: $x-space-md;
+	font-family: $x-font-family-heading;
+	line-height: $x-font-leading-heading;
+	letter-spacing: normal;
+	text-transform: none;
+	margin: 0;
 }
 
-.gutenberg .editor-block-list__block .wp-block-image .components-autocomplete {
-	font-size: calc( #{$x-font-size-xs} * 1.1 );
+/* File */
+
+.wp-block-file__textlink {
+	color: $x-color-secondary-base;
+	text-decoration: none;
+	@include link-underline();
+	
+	&:hover {
+		color: $x-color-primary-base;
+	}
 }
 
-[data-type="core/image"][data-align="center"] .wp-block-image figcaption {
-	margin-top: 0.2em;
+.wp-block-file .wp-block-file__button,
+.wp-block-file .wp-block-file__button:visited {
+	border: 2px solid $x-color-accent-base;
+	background-color: $x-color-accent-base;
+	color: $x-color-shade-white;
+	font-size: $x-font-size-sm;
+	line-height: $x-font-leading-body;
+	letter-spacing: $x-font-letter-spacing;
+	@include rounded( 25px );
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 600;
+	text-decoration: none;
+	text-transform: uppercase;
+	vertical-align: middle;
 }
 
-[data-type="core/image"] figcaption {
-	font-size: calc( #{$x-font-size-md} * 0.98 ) !important;
+.wp-block-file .wp-block-file__button:hover,
+.wp-block-file .wp-block-file__button:focus,
+.wp-block-file .wp-block-file__button:active {
+	background-color: transparent;
+	color: $x-color-accent-base !important;
+}
+
+/*--------------------------------------------------------------
+4.0 Blocks - Formatting
+--------------------------------------------------------------*/
+
+/* Verse */
+
+.wp-block-verse {
+	background-color: $x-color-shade-gray-2;
+	font-family: $x-font-family-body;
+	font-style: italic;
+	overflow: auto;
+	padding: $x-space-sm;
+}
+
+.wp-block-verse pre {
+	padding: 0;
+}
+
+/* Code */
+
+.wp-block-code {
+	background: $x-color-shade-gray-1;
+	border: none;
+	border-radius: 0;
+}
+
+.wp-block-code textarea {
+	background: transparent;
+}
+
+/* Preformatted */
+
+.wp-block-preformatted {
+	background-color: $x-color-shade-gray-2;
+	padding: $x-space-sm;
+}
+
+/* Pullquote */
+
+.wp-block-pullquote {
+	border: 0;
+	margin-top: 16px;
+	margin-bottom: 16px;
+	text-align: inherit;
+	padding: 0;
+
+	blockquote {
+		border-left: 4px solid grey;
+		border-left-color: $x-color-accent-base;
+		padding-left: 1em;
+		margin: auto 0;
+
+		> .editor-rich-text p {
+			font-size: $x-font-size-md;
+			font-style: italic;
+		}
+	}
+}
+
+.wp-block-pullquote__citation {
+	color: $x-color-words-subtle;
+	font-size: $x-font-size-sm;
+	text-transform: none;
+}
+
+.wp-block-pullquote.alignleft blockquote > .block-library-pullquote__content .editor-rich-text__tinymce[data-is-empty="true"]::before,
+.wp-block-pullquote.alignright blockquote > .block-library-pullquote__content .editor-rich-text__tinymce[data-is-empty="true"]::before,
+.wp-block-pullquote.alignleft blockquote > .editor-rich-text p,
+.wp-block-pullquote.alignright blockquote > .editor-rich-text p {
+	/* Font size */
+}
+
+/* Table */
+.wp-block-table {
+	td,
+	th {
+		border: 0;
+		padding: .5em;
+		text-align: left;
+	}
+	
+	tr:nth-child(even) {
+		background-color: $x-color-shade-gray-1;
+	}
+
+	thead tr:nth-child(odd) {
+		background-color: $x-color-shade-gray-2;
+	}
+}
+
+.rtl .wp-block-table th {
+	text-align: right;
+}
+
+.wp-block-table__cell-content {
+	padding: 0.5em; /* removes/adjusts padding in editor per cell */
+}
+
+/*--------------------------------------------------------------
+5.0 Blocks - Layout Elements
+--------------------------------------------------------------*/
+
+/* Buttons */
+
+.wp-block-button .wp-block-button__link {
+	border: 2px solid $x-color-accent-base;
+	background-color: $x-color-accent-base;
+	color: $x-color-shade-white;
+	font-size: $x-font-size-sm;
+	line-height: $x-font-leading-body;
+	letter-spacing: $x-font-letter-spacing;
+	@include rounded( 25px );
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 600;
+	text-decoration: none;
+	text-transform: uppercase;
+	vertical-align: middle;
+}
+
+.wp-block-button .wp-block-button__link:hover,
+.wp-block-button .wp-block-button__link:focus,
+.wp-block-button .wp-block-button__link:active {
+	background-color: transparent;
+	color: $x-color-accent-base !important;
+}
+
+.wp-block-button .editor-rich-text__tinymce.mce-content-body {
+	/* Set a line-height here, if the button height changes when you edit it */
+}
+
+/* Separator */
+
+.wp-block-separator {
+	height: 1px;
+	background-color: $x-color-border-base;
+	border: 0;
+	margin-bottom: 1.5em;
+	padding: 0;
+	width: 100px;
+	
+	&.is-style-wide {
+		width: 100%;
+	}
+
+	&.is-style-dots {
+		background-color: $x-color-shade-white;
+		border: 0;
+		width: auto;
+
+		&:before {
+			content: "\2666 \2666 \2666";
+			color: $x-color-words-subtle;
+			opacity: 0.5;
+			font-family: Arial,Helvetica,sans-serif;
+			letter-spacing: 1em;
+			padding-left: 1em;
+		}
+	}
+}
+
+/*--------------------------------------------------------------
+6.0 Blocks - Widgets
+--------------------------------------------------------------*/
+
+/* Categories, Latest Posts & Archives */
+
+[data-align="center"] .wp-block-categories ul,
+[data-align="center"] ul.wp-block-latest-posts,
+[data-align="center"] ul.wp-block-archives {
+	list-style-position: inside; /* makes sure bullets are centred with centred lists */
+	text-align: center;
+}
+
+/* Latest Comments */
+
+.wp-block-latest-comments {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.wp-block-latest-comments.aligncenter.has-avatars {
+	
+	.wp-block-latest-comments__comment {
+		.wp-block-latest-comments__comment-excerpt,
+		.wp-block-latest-comments__comment-meta {
+			margin-left: 0;
+		}
+	}
+
+	.avatar {
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+.wp-block-latest-comments.alignfull {
+	padding-left: 2.5em;
+}
+
+.wp-block-latest-comments__comment-meta,
+.wp-block-latest-comments__comment-excerpt p {
+	/* change font size */
+}
+
+.wp-block-latest-comments__comment-meta a {
+	/* change comment author name and post title styles */
+}
+
+.wp-block-latest-comments__comment-date {
+	/* change comment date styles */
+}
+
+.wp-block-latest-comments .wp-block-latest-comments__comment {
+	/* selector for each individual comment - good for borders, padding */
+}
+
+/* Latest Posts */
+.edit-post-visual-editor .wp-block-latest-posts.is-grid {
+	list-style: none;
+	margin-left: 0;
+	margin-right: 0;
 }
