--- a/stylesheets/variables/_colors.scss
+++ b/stylesheets/variables/_colors.scss
@@ -1,7 +1,7 @@
 
 $primary-color:   #4F5D75; // body text 
 
-$secondary-color: #593c8f; // accent #2a4858
+$secondary-color: #414d60; // accent #593c8f
 
 $accent-color: #FF5964; // secondary accent 
 
