--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -506,7 +506,7 @@ table.wp-block-table {
 		}
 				
 		cite {
-			font-size: calc( #{$x-font-size-md} * 0.92 );
+			font-size: $x-font-size-base;
 		}
 
 		&:before {
@@ -530,14 +530,14 @@ table.wp-block-table {
 
 .wp-block-pullquote {
 
-	margin-top: $x-space-lg;
-	margin-bottom: $x-space-lg;
+	margin: $x-space-lg 0;
 	text-align: inherit;
 	padding: 0;
 	
 	p {
 		margin: 0; 
-		font-size: $x-font-size-md;
+		font-size: $x-font-size-base;
+		font-weight: 600;
 	}
 
 	&.is-large p,
@@ -547,8 +547,18 @@ table.wp-block-table {
 	}
 
 	blockquote{
-			padding-left: $x-space-sm;
-		padding-right: $x-space-sm;
+		padding: $x-space-sm $x-space-md $x-space-sm $x-space-lg;
+		margin: 0;
+
+		&:before {
+			content: "\201C";
+			font-family: Georgia,serif;
+			font-weight: 400;
+			position: absolute;
+			left: 12px;
+			top: 0;
+			font-size: 60px;
+		}
 	}
 	
 	
@@ -556,23 +566,11 @@ table.wp-block-table {
 		max-width: 100%;
 	}
 
-	&.alignwide,
-	&.alignfull {
-		
-		blockquote {
-
-
-			@include media( tablet ) {
-				padding-left: $grid-gutter;
-				padding-right: $grid-gutter;
-			}
-		}
-	}
-
 	&.alignleft,
 	&.alignright {
 		margin-top: 0;
 		margin-bottom: $x-space-sm;
+		max-width: 305px;
 
 		blockquote {
 			margin-top: 0;
@@ -586,10 +584,6 @@ table.wp-block-table {
 
 	& > p:first-child {
 		margin-top: 0;
-	}
-	
-	&.alignfull {
-		max-width: calc( 100vw - 2em ) !important;
 	}
 }
 
