Update cover block classes to remove the 'image'.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -224,9 +224,9 @@
 	text-align: right;
 }
 
-// !Cover image
+// !Cover
 
-.wp-block-cover-image {
+.wp-block-cover {
 	width: inherit;
 
 	@include media( tablet ) {
@@ -247,7 +247,7 @@
 		margin-left: $x-space-md;
 	}
 
-	.wp-block-cover-image-text,
+	.wp-block-cover-text,
 	h2 {
 		font-weight: 400;
 		padding: $x-space-md;
@@ -263,8 +263,8 @@
 	}
 }
 
-[data-align=left] .wp-block-cover-image,
-[data-align=right] .wp-block-cover-image {
+[data-align=left] .wp-block-cover,
+[data-align=right] .wp-block-cover {
 
 	max-width: 285px;
 
