Swap the header background images.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -44,7 +44,7 @@
 
 .hentry {
 	.entry-header {
-		background: url("shattered.png") repeat $x-color-secondary-base;
+		background: url("images/abstract_bg.png") repeat $x-color-secondary-base;
 		padding: 120px 0 $x-space-md;	
 	}
 
@@ -300,7 +300,7 @@
 
 .page-header {
 
-	background: url("shattered.png") repeat $x-color-secondary-base;
+	background: url("images/abstract_bg.png") repeat $x-color-secondary-base;
 	padding: 100px 0 $x-space-md;
 
 	.page-title,
