WIP: Business editor styles rewrite.

--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -94,7 +94,7 @@ dfn, em, i {
 blockquote,
 blockquote.is-large {
 
-	border-left: 4px solid grey;
+	border-left: 4px solid transparent;
 	border-left-color: $x-color-accent-base;
 
 	p {
