Remove header background image, use solid background.

--- a/stylesheets/_site-branding.scss
+++ b/stylesheets/_site-branding.scss
@@ -17,7 +17,7 @@
 	}
 
 	.blog & {
-		background: url("images/abstract_bg.png") repeat $x-color-secondary-base;
+		background-color: $x-color-secondary-base;
 		position: static;
 		padding-bottom: $x-space-lg;
 	}
